--- a/index.html
+++ b/index.html
@@ -11,36 +11,36 @@
 <body>
   <div class="wrapper">
 
-    <header class="header">
-      <a href="#" class="logo">
-        <img src="" alt="Логотип «Air Asia»" class="logo__pic">
-      </a>
-      <nav class="menu">
-        <ul class="menu__list">
-          <li class="menu__item">
-            <a href="" class="menu__link">Главная</a>
-          </li>
-          <li class="menu__item">
-            <a href="" class="menu__link">Услуги</a>
-          </li>
-          <li class="menu__item">
-            <a href="" class="menu__link">Отзывы</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-        <div class="contacts__workhours">График работы</div>
-        <div class="contacts__time">
-          <div class="contacts__days">пн-вс: 09:00 - 20:00</div>
-          <div class="contacts__lunch">Обед: 14:00-14:30</div>
-        </div>
-      </address>
-    </header>
-
     <main class="main-content">
 
       <section class="main-screen">
+        <img src="" alt="" class="main-screen__pic">
+        <header class="header">
+          <a href="#" class="logo">
+            <img src="" alt="Логотип «Air Asia»" class="logo__pic">
+          </a>
+          <nav class="menu">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a href="" class="menu__link">Главная</a>
+              </li>
+              <li class="menu__item">
+                <a href="" class="menu__link">Услуги</a>
+              </li>
+              <li class="menu__item">
+                <a href="" class="menu__link">Отзывы</a>
+              </li>
+            </ul>
+          </nav>
+          <address class="contacts">
+            <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
+            <div class="contacts__workhours">График работы</div>
+            <div class="contacts__time">
+              <div class="contacts__days">пн-вс: 09:00 - 20:00</div>
+              <div class="contacts__lunch">Обед: 14:00-14:30</div>
+            </div>
+          </address>
+        </header>
         <h1 class="main-screen__header">Авторские туры по Азии</h1>
         <p class="main-screen__text">Открой для себя Азию</p>
         <a href="#" class="button">Подробнее</a>
@@ -48,62 +48,62 @@
 
       <section class="tours">
         <div class="section-title">
-          <h2 class="section-title__header section-header">Горящие туры</h2>
+          <h2 class="section-title__name section-name">Горящие туры</h2>
           <img src="" alt="Огонь" class="section-title__pic">
         </div>
         <ul class="tours__list">
-          <li class="product-card">
-            <img src="" alt="" class="product-card__pic">
-            <h3 class="product-card__header">Таиланд</h3>
-            <ul class="product-card__features">
-              <li class="product-card__feature">
-                <img src="" alt="" class="product-card__feature-icon">
-                <div class="product-card__feature-text">7 - 12 ночей</div>
+          <li class="tours__card">
+            <img src="" alt="" class="tours__pic">
+            <h3 class="tours__title">Таиланд</h3>
+            <ul class="tours__features">
+              <li class="tours__feature">
+                <img src="" alt="" class="tours__feature-icon">
+                <div class="tours__feature-text">7 - 12 ночей</div>
               </li>
-              <li class="product-card__feature">
-                <img src="" alt="" class="product-card__feature-icon">
-                <div class="product-card__feature-text">Завтраки</div>
+              <li class="tours__feature">
+                <img src="" alt="" class="tours__feature-icon">
+                <div class="tours__feature-text">Завтраки</div>
               </li>
             </ul>
-            <p class="product-card__description">
+            <p class="tours__description">
               Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового
               участия.
             </p>
             <a href="#" class="button button--white">Смотреть</a>
           </li>
-          <li class="product-card">
-            <img src="" alt="" class="product-card__pic">
-            <h3 class="product-card__header">Бали</h3>
-            <ul class="product-card__features">
-              <li class="product-card__feature">
-                <img src="" alt="" class="product-card__feature-icon">
-                <div class="product-card__feature-text">7 - 12 ночей</div>
+          <li class="tours__card">
+            <img src="" alt="" class="tours__pic">
+            <h3 class="tours__title">Бали</h3>
+            <ul class="tours__features">
+              <li class="tours__feature">
+                <img src="" alt="" class="tours__feature-icon">
+                <div class="tours__feature-text">7 - 12 ночей</div>
               </li>
-              <li class="product-card__feature">
-                <img src="" alt="" class="product-card__feature-icon">
-                <div class="product-card__feature-text">Завтраки</div>
+              <li class="tours__feature">
+                <img src="" alt="" class="tours__feature-icon">
+                <div class="tours__feature-text">Завтраки</div>
               </li>
             </ul>
-            <p class="product-card__description">
+            <p class="tours__description">
               Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового
               участия.
             </p>
             <a href="#" class="button button--white">Смотреть</a>
           </li>
-          <li class="product-card">
-            <img src="" alt="" class="product-card__pic">
-            <h3 class="product-card__header">Индонезия</h3>
-            <ul class="product-card__features">
-              <li class="product-card__feature">
-                <img src="" alt="" class="product-card__feature-icon">
-                <div class="product-card__feature-text">7 - 12 ночей</div>
+          <li class="tours__card">
+            <img src="" alt="" class="tours__pic">
+            <h3 class="tours__title">Индонезия</h3>
+            <ul class="tours__features">
+              <li class="tours__feature">
+                <img src="" alt="" class="tours__feature-icon">
+                <div class="tours__feature-text">7 - 12 ночей</div>
               </li>
-              <li class="product-card__feature">
-                <img src="" alt="" class="product-card__feature-icon">
-                <div class="product-card__feature-text">Завтраки</div>
+              <li class="tours__feature">
+                <img src="" alt="" class="tours__feature-icon">
+                <div class="tours__feature-text">Завтраки</div>
               </li>
             </ul>
-            <p class="product-card__description">
+            <p class="tours__description">
               Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового
               участия.
             </p>
@@ -113,7 +113,7 @@
       </section>
 
       <section class="news">
-        <h2 class="section-header">Новости и акции</h2>
+        <h2 class="section-name">Новости и акции</h2>
         <div class="news__content">
           <ul class="news__list">
             <li class="news__card info-card">
@@ -148,7 +148,7 @@
       <section class="about">
         <img src="" alt="" class="about__pic">
         <div class="about__block">
-          <h2 class="section-header section-header--dark">О нас</h2>
+          <h2 class="section-name section-name--dark">О нас</h2>
           <p class="about__text">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях.</p>
           <a href="#" class="button">Подробнее</a>
         </div>
