--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               <div class="contacts__lunch">Обед: 14:00-14:30</div>
             </div>
           </address>
-        </div class="container">
+        </div>
       </header>
       
       <main class="main-content container">
