Сделал оформление h2 через модификаторы.

--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@
         </section>
       
         <section class="tours">
-          <div class="section-title">
-            <h2 class="section-title__name section-name">Горящие туры</h2>
-            <img src="" alt="Огонь" class="section-title__pic">
-          </div>
+          <h2 class="section-name section-name--fire">Горящие туры</h2>
           <ul class="tours__list">
             <li class="tours__card">
               <img src="" alt="" class="tours__pic">
