--- a/index.html
+++ b/index.html
@@ -4,27 +4,28 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=1200, initial-scale=1.0">
   <link rel="stylesheet" href="./style/main.css">
   <title>Air Asia</title>
 </head>
 
 <body>
-  <div class="wrapper wrapper__main">
+  <div class="wrapper wrapper--bg">
 
     <div class="wrapper__top">
+
       <header class="header">
-        <div class="container">
+        <div class="container header__container">
           <a href="/" class="logo">
             <img src="./img/logo.png" alt="Логотип «Air Asia»" class="logo__pic">
           </a>
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="" class="menu__link">Главная</a>
+                <a href="/" class="menu__link">Главная</a>
               </li>
               <li class="menu__item">
-                <a href="" class="menu__link">Услуги</a>
+                <a href="./services.html" class="menu__link">Услуги</a>
               </li>
               <li class="menu__item">
                 <a href="" class="menu__link">Отзывы</a>
@@ -35,77 +36,87 @@
             <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
             <div class="contacts__workhours">График работы</div>
             <!-- <div class="contacts__time">
-              <div class="contacts__days">пн-вс: 09:00 - 20:00</div>
-              <div class="contacts__lunch">Обед: 14:00-14:30</div>
-            </div> -->
+                <div class="contacts__days">пн-вс: 09:00 - 20:00</div>
+                <div class="contacts__lunch">Обед: 14:00-14:30</div>
+              </div> -->
           </address>
         </div>
       </header>
 
-      <main class="main-content container">
+      <main class="main-content">
 
         <section class="first-screen">
-          <div class="first-screen__content">
-            <h1 class="first-screen__title">Авторские туры по Азии</h1>
-            <p class="first-screen__text">Открой для себя Азию</p>
-            <a href="#" class="button">Подробнее</a>
-          </div class="first-screen__content">
+          <div class="container first-screen__container">
+            <div class="first-screen__content">
+              <h1 class="first-screen__title page-title">Авторские туры по Азии</h1>
+              <p class="first-screen__text">Открой для себя Азию</p>
+              <a href="#" class="button">Подробнее</a>
+            </div>
+          </div>
         </section>
 
         <section class="section tours">
-          <h2 class="section-title section-title--fire">Горящие туры</h2>
-          <ul class="tours__list">
-            <li class="tours__card">
-              <img src="./img/river.png" alt="Река" class="tours__pic">
-              <div class="tours__content">
-                <h3 class="tours__title">Таиланд</h3>
-                <ul class="tours__features">
-                  <li class="tours__feature tours__feature--days">7 - 12 ночей</li>
-                  <li class="tours__feature tours__feature--food">Завтраки</li>
-                </ul>
-                <p class="tours__description">
-                  Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового
-                  участия.
-                </p>
-                <a href="#" class="button button--light">Смотреть</a>
-              </div class="tours__content">
-            </li>
-            <li class="tours__card">
-              <img src="./img/pool.png" alt="Бассейн" class="tours__pic">
-              <div class="tours__content">
-                <h3 class="tours__title">Бали</h3>
-                <ul class="tours__features">
-                  <li class="tours__feature tours__feature--days">7 - 12 ночей</li>
-                  <li class="tours__feature tours__feature--food">Завтраки</li>
-                </ul>
-                <p class="tours__description">
-                  Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового
-                  участия.
-                </p>
-                <a href="#" class="button button--light">Смотреть</a>
-              </div>
-            </li>
-            <li class="tours__card">
-              <img src="./img/ocean.png" alt="Океан" class="tours__pic">
-              <div class="tours__content">
-                <h3 class="tours__title">Индонезия</h3>
-                <ul class="tours__features">
-                  <li class="tours__feature tours__feature--days">7 - 12 ночей</li>
-                  <li class="tours__feature tours__feature--food">Завтраки</li>
-                </ul>
-                <p class="tours__description">
-                  Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового
-                  участия.
-                </p>
-                <a href="#" class="button button--light">Смотреть</a>
-              </div>
-            </li>
-          </ul>
+          <div class="container">
+            <h2 class="section-title section-title--fire">Горящие туры</h2>
+            <ul class="tours__list">
+              <li class="tours__card offer">
+                <img src="./img/river.png" alt="Река" class="offer__pic">
+                <div class="offer__content">
+                  <h3 class="offer__title">Таиланд</h3>
+                  <ul class="offer__features">
+                    <li class="offer__feature offer__feature--days">7 - 12 ночей</li>
+                    <li class="offer__feature offer__feature--food">Завтраки</li>
+                  </ul>
+                  <p class="offer__description">
+                    Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового
+                    участия.
+                  </p>
+                  <div class="offer__btn-wrapper">
+                    <a href="#" class="button button--light button--small">Смотреть</a>
+                  </div>
+                </div>
+              </li>
+              <li class="tours__card offer">
+                <img src="./img/pool.png" alt="Бассейн" class="offer__pic">
+                <div class="offer__content">
+                  <h3 class="offer__title">Бали</h3>
+                  <ul class="offer__features">
+                    <li class="offer__feature offer__feature--days">7 - 12 ночей</li>
+                    <li class="offer__feature offer__feature--food">Завтраки</li>
+                  </ul>
+                  <p class="offer__description">
+                    Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового
+                    участия.
+                  </p>
+                  <div class="offer__btn-wrapper">
+                    <a href="#" class="button button--light button--small">Смотреть</a>
+                    </>
+                  </div>
+              </li>
+              <li class="tours__card offer">
+                <img src="./img/ocean.png" alt="Океан" class="offer__pic">
+                <div class="offer__content">
+                  <h3 class="offer__title">Индонезия</h3>
+                  <ul class="offer__features">
+                    <li class="offer__feature offer__feature--days">7 - 12 ночей</li>
+                    <li class="offer__feature offer__feature--food">Завтраки</li>
+                  </ul>
+                  <p class="offer__description">
+                    Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового
+                    участия.
+                  </p>
+                  <div class="offer__btn-wrapper">
+                    <a href="#" class="button button--light button--small">Смотреть</a>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
         </section>
 
         <section class="section news">
-          <h2 class="section-title">Новости и акции</h2>
-          <div class="news__content">
+          <div class="container">
+            <h2 class="section-title">Новости и акции</h2>
             <ul class="news__list">
               <li class="news__card info-card">
                 <img src="./img/plane.png" alt="" class="info-card__pic">
@@ -156,61 +167,64 @@
         </section>
 
         <section class="section about">
-          <div class="about__block">
-            <h2 class="about__title section-title section-title--dark">О нас</h2>
-            <div class="about__text">
-              <p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько
-                абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык
-                публичных выступлений в домашних условиях.
-              </p>
+          <div class="container">
+            <div class="about__content">
+              <div class="about__block">
+                <h2 class="about__title section-title section-title--dark">О нас</h2>
+                <div class="about__text">
+                  <p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько
+                    абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык
+                    публичных выступлений в домашних условиях.
+                  </p>
+                </div>
+                <a href="#" class="button">Подробнее</a>
+              </div>
             </div>
-            <a href="#" class="button">Подробнее</a>
           </div>
         </section>
-
       </main>
     </div>
 
-    <footer class="footer">
-      <div class="container footer__content">
-        <a href="/" class="logo">
-          <img src="./img/logo.png" alt="Логотип «Air Asia»" class="logo__pic">
-        </a>
-        <nav class="menu">
-          <ul class="menu__list">
-            <li class="menu__item">
-              <a href="" class="menu__link">Главная</a>
+    <footer class="footer-wrapper">
+      <div class="container footer-wrapper__container">
+        <div class="footer">
+          <a href="/" class="logo">
+            <img src="./img/logo.png" alt="Логотип «Air Asia»" class="logo__pic">
+          </a>
+          <nav class="menu">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a href="/" class="menu__link">Главная</a>
+              </li>
+              <li class="menu__item">
+                <a href="./services.html" class="menu__link">Услуги</a>
+              </li>
+              <li class="menu__item">
+                <a href="" class="menu__link">Отзывы</a>
+              </li>
+            </ul>
+          </nav>
+          <ul class="social">
+            <li class="social__item social__item--tg">
+              <a href="" class="social__link"></a>
             </li>
-            <li class="menu__item">
-              <a href="" class="menu__link">Услуги</a>
+            <li class="social__item social__item--vk">
+              <a href="" class="social__link"></a>
             </li>
-            <li class="menu__item">
-              <a href="" class="menu__link">Отзывы</a>
+            <li class="social__item social__item--fb">
+              <a href="" class="social__link"></a>
+            </li>
+            <li class="social__item social__item--inst">
+              <a href="" class="social__link "></a>
             </li>
           </ul>
-        </nav>
-        <ul class="social">
-          <li class="social__item social__item--tg">
-            <a href="" class="social__link"></a>
-          </li>
-          <li class="social__item social__item--vk">
-            <a href="" class="social__link"></a>
-          </li>
-          <li class="social__item social__item--fb">
-            <a href="" class="social__link"></a>
-          </li>
-          <li class="social__item social__item--inst">
-            <a href="" class="social__link "></a>
-          </li>
-        </ul>
-        <address class="contacts">
-          <div class="contacts__info">Бесплатный звонок по России</div>
-          <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-        </address>
+          <address class="contacts">
+            <div class="contacts__info">Бесплатный звонок по России</div>
+            <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
+          </address>
+        </div>
       </div class="container">
     </footer>
-
   </div>
 </body>
-
 </html>
