Испраавил ховер услуг и выравнивание логотипов.

--- a/services.html
+++ b/services.html
@@ -61,39 +61,35 @@
         <section class="section section--bg--light services">
           <div class="container">
             <ul class="services__list">
-              <li class="services__item">
-                <a href="#" class="service">
-                  <img src="./img/waterfall.png" alt="Водопад" class="service__pic">
-                  <div class="service__content">
-                    <h3 class="service__title">Водопад Янг-бей</h3>
-                    <div class="service__text">
-                      <p>
-                        Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более
-                        менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных
-                        выступлений в домашних условиях. При создании генератора мы использовали небезизвестный
-                        универсальный код речей.
-                      </p>
-                    </div>
-                    <div class="button button--light button--wider service__btn">Подробнее</div>
+              <li class="services__item service">
+                <img src="./img/waterfall.png" alt="Водопад" class="service__pic">
+                <div class="service__content">
+                  <h3 class="service__title">Водопад Янг-бей</h3>
+                  <div class="service__text">
+                    <p>
+                      Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более
+                      менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных
+                      выступлений в домашних условиях. При создании генератора мы использовали небезизвестный
+                      универсальный код речей.
+                    </p>
                   </div>
-                </a>
+                  <a class="button button--light button--wider">Подробнее</a>
+                </div>
               </li>
-              <li class="services__item">
-                <a href="#" class="service">
-                  <img src="./img/monkeys.png" alt="Обезъяны" class="service__pic">
-                  <div class="service__content">
-                    <h3 class="service__title">Остров обезьян</h3>
-                    <div class="service__text">
-                      <p>
-                        Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более
-                        менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных
-                        выступлений в домашних условиях. При создании генератора мы использовали небезизвестный
-                        универсальный код речей.
-                      </p>
-                    </div>
-                    <div class="button button--light button--wider service__btn">Подробнее</div>
+              <li class="services__item service">
+                <img src="./img/monkeys.png" alt="Обезъяны" class="service__pic">
+                <div class="service__content">
+                  <h3 class="service__title">Остров обезьян</h3>
+                  <div class="service__text">
+                    <p>
+                      Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более
+                      менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных
+                      выступлений в домашних условиях. При создании генератора мы использовали небезизвестный
+                      универсальный код речей.
+                    </p>
                   </div>
-                </a>
+                  <a class="button button--light button--wider">Подробнее</a>
+                </div>
               </li>
             </ul>
             <div class="pagination pagination--dark">
@@ -217,4 +213,5 @@
     </footer>
   </div>
 </body>
+
 </html>
