Закончил вёрстку сайта.

--- a/index.html
+++ b/index.html
@@ -6,225 +6,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=1200, initial-scale=1.0">
   <link rel="stylesheet" href="./style/main.css">
-  <title>Air Asia</title>
+  <title>Air Asia — Приветственная страница</title>
 </head>
 
 <body>
-  <div class="wrapper wrapper--bg">
-
-    <div class="wrapper__top">
-
-      <header class="header">
-        <div class="container header__container">
-          <a href="/" class="logo">
-            <img src="./img/logo.png" alt="Логотип «Air Asia»" class="logo__pic">
-          </a>
-          <nav class="menu">
-            <ul class="menu__list">
-              <li class="menu__item">
-                <a href="/" class="menu__link">Главная</a>
-              </li>
-              <li class="menu__item">
-                <a href="./services.html" class="menu__link">Услуги</a>
-              </li>
-              <li class="menu__item">
-                <a href="" class="menu__link">Отзывы</a>
-              </li>
-            </ul>
-          </nav>
-          <address class="contacts">
-            <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-            <div class="contacts__workhours">График работы</div>
-            <!-- <div class="contacts__time">
-                <div class="contacts__days">пн-вс: 09:00 - 20:00</div>
-                <div class="contacts__lunch">Обед: 14:00-14:30</div>
-              </div> -->
-          </address>
+  <div class="hello">
+    <div class="hello__container">
+      <div class="hello__central">
+        <img class="hello__logo" src="./img/logo-hello.png" alt="Air Asia">
+        <div class="hello__content">
+          <p class="hello__text first-screen__text">Открой для себя Азию</p>
+          <a href="./main.html" class="button button--hello">Войти</a>
         </div>
-      </header>
-
-      <main class="main-content">
-
-        <section class="first-screen">
-          <div class="container first-screen__container">
-            <div class="first-screen__content">
-              <h1 class="first-screen__title page-title">Авторские туры по Азии</h1>
-              <p class="first-screen__text">Открой для себя Азию</p>
-              <a href="#" class="button">Подробнее</a>
-            </div>
-          </div>
-        </section>
-
-        <section class="section tours">
-          <div class="container">
-            <h2 class="section-title section-title--fire">Горящие туры</h2>
-            <ul class="tours__list">
-              <li class="tours__card offer">
-                <img src="./img/river.png" alt="Река" class="offer__pic">
-                <div class="offer__content">
-                  <h3 class="offer__title">Таиланд</h3>
-                  <ul class="offer__features">
-                    <li class="offer__feature offer__feature--days">7 - 12 ночей</li>
-                    <li class="offer__feature offer__feature--food">Завтраки</li>
-                  </ul>
-                  <p class="offer__description">
-                    Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового
-                    участия.
-                  </p>
-                  <div class="offer__btn-wrapper">
-                    <a href="#" class="button button--light button--small">Смотреть</a>
-                  </div>
-                </div>
-              </li>
-              <li class="tours__card offer">
-                <img src="./img/pool.png" alt="Бассейн" class="offer__pic">
-                <div class="offer__content">
-                  <h3 class="offer__title">Бали</h3>
-                  <ul class="offer__features">
-                    <li class="offer__feature offer__feature--days">7 - 12 ночей</li>
-                    <li class="offer__feature offer__feature--food">Завтраки</li>
-                  </ul>
-                  <p class="offer__description">
-                    Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового
-                    участия.
-                  </p>
-                  <div class="offer__btn-wrapper">
-                    <a href="#" class="button button--light button--small">Смотреть</a>
-                    </>
-                  </div>
-              </li>
-              <li class="tours__card offer">
-                <img src="./img/ocean.png" alt="Океан" class="offer__pic">
-                <div class="offer__content">
-                  <h3 class="offer__title">Индонезия</h3>
-                  <ul class="offer__features">
-                    <li class="offer__feature offer__feature--days">7 - 12 ночей</li>
-                    <li class="offer__feature offer__feature--food">Завтраки</li>
-                  </ul>
-                  <p class="offer__description">
-                    Равным образом постоянное обеспечение нашей деятельности позволяет оценить значение систем массового
-                    участия.
-                  </p>
-                  <div class="offer__btn-wrapper">
-                    <a href="#" class="button button--light button--small">Смотреть</a>
-                  </div>
-                </div>
-              </li>
-            </ul>
-          </div>
-        </section>
-
-        <section class="section news">
-          <div class="container">
-            <h2 class="section-title">Новости и акции</h2>
-            <ul class="news__list">
-              <li class="news__card info-card">
-                <img src="./img/plane.png" alt="" class="info-card__pic">
-                <div class="info-card__content">
-                  <time class="info-card__date">Декабрь 2019</time>
-                  <h3 class="info-card__title">Дешевые путевки на Новый Год!</h3>
-                  <p class="info-card__description">Проведи новый год в Тайланде</p>
-                </div>
-              </li>
-              <li class="news__card info-card">
-                <img src="./img/surfer.png" alt="" class="info-card__pic">
-                <div class="info-card__content">
-                  <time class="info-card__date">Декабрь 2019</time>
-                  <h3 class="info-card__title">Акция для серфенгистов!</h3>
-                  <p class="info-card__description">В сезон больших волн скидка на путевку в Тайланд на остров
-                    серфенгистов.
-                    Удачного пути!</p>
-                </div>
-              </li>
-            </ul>
-            <div class="pagination">
-              <div class="pagination__current">Страница 1 из 7</div>
-              <ul class="pagination__list">
-                <li class="pagination__item pagination__item--active">
-                  <a href="#" class="pagination__link">1</a>
-                </li>
-                <li class="pagination__item">
-                  <a href="#" class="pagination__link">2</a>
-                </li>
-                <li class="pagination__item">
-                  <a href="#" class="pagination__link">3</a>
-                </li>
-                <li class="pagination__item">
-                  <a href="#" class="pagination__link">4</a>
-                </li>
-                <li class="pagination__item">
-                  <a href="#" class="pagination__link">5</a>
-                </li>
-                <li class="pagination__item">
-                  <a href="#" class="pagination__link">6</a>
-                </li>
-                <li class="pagination__item">
-                  <a href="#" class="pagination__link">7</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </section>
-
-        <section class="section about">
-          <div class="container">
-            <div class="about__content">
-              <div class="about__block">
-                <h2 class="about__title section-title section-title--dark">О нас</h2>
-                <div class="about__text">
-                  <p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько
-                    абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык
-                    публичных выступлений в домашних условиях.
-                  </p>
-                </div>
-                <a href="#" class="button">Подробнее</a>
-              </div>
-            </div>
-          </div>
-        </section>
-      </main>
+      </div>
     </div>
-
-    <footer class="footer-wrapper">
-      <div class="container footer-wrapper__container">
-        <div class="footer">
-          <a href="/" class="logo">
-            <img src="./img/logo.png" alt="Логотип «Air Asia»" class="logo__pic">
-          </a>
-          <nav class="menu">
-            <ul class="menu__list">
-              <li class="menu__item">
-                <a href="/" class="menu__link">Главная</a>
-              </li>
-              <li class="menu__item">
-                <a href="./services.html" class="menu__link">Услуги</a>
-              </li>
-              <li class="menu__item">
-                <a href="" class="menu__link">Отзывы</a>
-              </li>
-            </ul>
-          </nav>
-          <ul class="social">
-            <li class="social__item social__item--tg">
-              <a href="" class="social__link"></a>
-            </li>
-            <li class="social__item social__item--vk">
-              <a href="" class="social__link"></a>
-            </li>
-            <li class="social__item social__item--fb">
-              <a href="" class="social__link"></a>
-            </li>
-            <li class="social__item social__item--inst">
-              <a href="" class="social__link "></a>
-            </li>
-          </ul>
-          <address class="contacts">
-            <div class="contacts__info">Бесплатный звонок по России</div>
-            <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-          </address>
-        </div>
-      </div class="container">
-    </footer>
   </div>
 </body>
+
 </html>
