--- a/services.html
+++ b/services.html
@@ -23,30 +23,32 @@
             <nav class="menu">
               <ul class="menu__list">
                 <li class="menu__item">
-                  <a href="/" class="menu__link">Главная</a>
+                  <a href="./main.html" class="menu__link">Главная</a>
                 </li>
                 <li class="menu__item">
                   <a href="./services.html" class="menu__link">Услуги</a>
                 </li>
                 <li class="menu__item">
-                  <a href="" class="menu__link">Отзывы</a>
+                  <a href="./testimonials.html" class="menu__link">Отзывы</a>
                 </li>
               </ul>
             </nav>
             <address class="contacts">
               <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-              <div class="contacts__workhours">График работы</div>
-              <!-- <div class="contacts__time">
+              <div class="contacts__dropdown">
+                <div class="contacts__workhours">График работы</div>
+                <div class="contacts__time">
                   <div class="contacts__days">пн-вс: 09:00 - 20:00</div>
                   <div class="contacts__lunch">Обед: 14:00-14:30</div>
-                </div> -->
+                </div>
+              </div>
             </address>
           </header>
           <h1 class="top-line__title page-title">Услуги</h1>
           <nav class="breadcrumbs">
             <ul class="breadcrumbs__list">
               <li class="breadcrumbs__item">
-                <a class="breadcrumbs__link" href="/">Главная</a>
+                <a class="breadcrumbs__link" href="./main.html">Главная</a>
               </li>
               <li class="breadcrumbs__item breadcrumbs__item--active">
                 <a class="breadcrumbs__link" href="">Услуги</a>
@@ -121,9 +123,9 @@
           </div>
         </section>
 
-        <section class="section partners">
+        <section class="section section--bg--gray partners">
           <div class="container">
-            <h2 class="partners__title section-title section-title--blue">Партнеры</h2>
+            <h2 class="partners__title section__title section__title--blue">Партнеры</h2>
             <ul class="partners__list">
               <li class="partners__item">
                 <a href="#" class="partners__link">
@@ -180,13 +182,13 @@
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="/" class="menu__link">Главная</a>
+                <a href="./main.html" class="menu__link">Главная</a>
               </li>
               <li class="menu__item">
                 <a href="./services.html" class="menu__link">Услуги</a>
               </li>
               <li class="menu__item">
-                <a href="" class="menu__link">Отзывы</a>
+                <a href="./testimonials.html" class="menu__link">Отзывы</a>
               </li>
             </ul>
           </nav>
