--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 
       <header class="header">
         <div class="container header__container">
-          <a href="/" class="logo">
+          <a href="./" class="logo">
             <img src="./img/logo.png" alt="Логотип «Air Asia»" class="logo__pic">
           </a>
           <nav class="menu">
@@ -190,7 +190,7 @@
     <footer class="footer-wrapper">
       <div class="container footer-wrapper__container">
         <div class="footer">
-          <a href="/" class="logo">
+          <a href="./" class="logo">
             <img src="./img/logo.png" alt="Логотип «Air Asia»" class="logo__pic">
           </a>
           <nav class="menu">
