--- a/services.html
+++ b/services.html
@@ -17,7 +17,7 @@
       <section class="top-line">
         <div class="container top-line__container">
           <header class="header top-line__header">
-            <a href="/" class="logo">
+            <a href="./" class="logo">
               <img src="./img/logo.png" alt="Логотип «Air Asia»" class="logo__pic">
             </a>
             <nav class="menu">
@@ -176,7 +176,7 @@
     <footer class="footer-wrapper">
       <div class="container">
         <div class="footer footer--inner">
-          <a href="/" class="logo">
+          <a href="./" class="logo">
             <img src="./img/logo.png" alt="Логотип «Air Asia»" class="logo__pic">
           </a>
           <nav class="menu">
